Fix dark mode script duplication and add new styles to index.css

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -69,6 +69,16 @@
 .row img{
     width: 350px;
 }
+.resume-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.resume{
+    width: 60%;
+}
 .viewmore a{
     background-color: rgb(255, 3, 247);
     font-weight: 600;
@@ -240,6 +250,8 @@ nav ul {
 .firstsec .left{
     font-size: 80px;
     width: 500px;
+    margin-top: 100px;
+    height: 500px;
 }
 .firstsec .right{
     font-size: 50px;
